# kokoro.cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  example.cpp  kokoro.kokoro_tts.hpp  kokoro.py
include/: kokoro.kokoro_tts.hpp  kokoro_common.hpp  kokoro_espeak.hpp
scripts/: README.md  download-weights-hf.sh  upload-weights-hf.sh
src/: cli.cpp  server.cpp
